# hello-ipc-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: LedManager.hpp  Logger.hpp  Service.hpp  UpdateLed.hpp
include/hello-ipc/: LedManager.hpp  Logger.hpp  QueryLed.hpp  Service.hpp  UpdateLed.hpp
proto/: led_service.proto
src/: main.cpp
src/hello-ipc/: LedManager.cpp  Logger.cpp  QueryLed.cpp  Service.cpp  UpdateLed.cpp
test/: CMakeLists.txt
test/src/hello-ipc/: LedManagerTests.cpp  LoggerTests.cpp  QueryLedTests.cpp  ServiceTests.cpp  UpdateLedTests.cpp
